# ai-news-pipeline

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  run_pipeline.py
scheduler/: com.ainews.pipeline.plist  install.sh  run.sh
src/: config.py  models.py  setup_wizard.py
src/agent/: evaluator.py  tester.py
src/distribute/: claude_config.py  digest_generator.py  github_publisher.py  obsidian.py  telegram_voice.py
src/pipeline/: aggregator.py  ranker.py
src/scrapers/: __init__.py  base.py  github_trending.py  hackernews.py  producthunt.py  reddit.py  rss_feeds.py  twitter.py  youtube.py
tests/: test_run_pipeline_telegram_delivery.py  test_telegram_voice.py
